# uma2

./: .gitignore  AGENTS.md  COMMIT_MESSAGE.txt  README.md  pyproject.toml
.cursor/rules/: 01-project.mdc
docs/: 20251201-010207-intro.md  20251202-050343-log-concept.md  20260103-130403-log-impl_proposal.md  20260104-142932-log-impl_proposal-entity_handlers.md  20260104-195602-doc-API_IMPLEMENTATION_SUMMARY.md  20260104-195632-doc-API_SUMMARY.md  20260104-195714-doc-PROJECT_STRUCTURE.md  20260104-195802-doc-QUICKSTART.md  20260104-203856-log-project_setup.md  20260104-220450-doc-JSQL_SPECIFICATION.md  20260104-224628-log-jsql_implementation.md  20260104-230000-log-jsql_refactoring.md  20260105-160000-doc-SQL_JSQL_CONVERSION.md  20260105-171801-log-sql_jsql_conversion.md  20260105-172223-code_review-SQL_JSQL_conversion.md  20260105-173000-debug_logging_proposal.md  20260105-174500-fixes-critical_issues.md  20260105-174931-performance_analysis.md  20260105-174932-error_handling_strategy.md  20260109-154412-log-initialization_refactor.md  20260111-170750-log-backend.md  20260115-172102-log-backend_testing.md  20260115-173521-code-review-backend_testing.md  20260115-180846-log-code_review.md  20260115-181551-code-review.md  20260117-085234-analysis-missing_operators.md  20260117-085234-plan-ILike_support.md  20260117-085234-plan-convenience_operators.md  20260117-090803-log-additional_operators_and_jsql_tests.md  20260117-090803-report-review.md  20260117-093423-plan-jsql_to_sql_tests.md  20260117-140737-log-test-sql2jsql_conversion.md  20260117-140818-code-review-large_files.md  20260117-234240-code-review-operator_support.md  20260118-030000-code-review-feature-branch.md  20260119-163414-log-backend_frontend_testing
docs/20260114-101913-refactoring/: 20260114-102004-log-code_review.md  20260115-083745-log-refactoring.md  20260115-083842-log-review.md  20260115-085405-code-review.md  CODE_REVIEW_2026-01-13.md  (+2 more)
examples/: api_usage.py  basic_usage.py  converter_usage.py  jsql_usage.py
examples/backend/: .env.example  .gitignore  README.md  pyproject.toml
examples/backend/src/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py
examples/backend/src/models/: requests.py  responses.py
examples/backend/src/routers/: uma.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_cache.py  test_complex_sql_roundtrip.py  test_converter.py  test_fixes_operator_support.py  test_high_priority_fixes.py  test_jsql.py  test_jsql_to_sql.py  test_sql_to_jsql_roundtrip.py
(+61 files in other folders)
