[project]
name = "namerec-uma"
version = "0.4"
release_date = "2026-01-15"
description = "Unified Model Access - A Python package for unified database access via JSON-SQL queries"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "aka.NameRec@gmail.com"},
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "sqlglot>=25.0.0",
    "sqlparse>=0.5.0",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/namerec/uma"
Repository = "https://github.com/namerec/uma"

[project.scripts]
convert-query = "namerec.uma.scripts.convert_query:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aiosqlite>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/namerec"]

[tool.mypy]
python_version = "3.13"
disable_error_code = ["explicit-override"]
explicit_package_bases = true
implicit_reexport = true
no_implicit_optional = true
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = true
disallow_any_expr = false
disallow_any_explicit = false
disallow_any_decorated = false
disallow_subclassing_any = false
disallow_any_unimported = false
disallow_untyped_calls = false

[tool.ruff]
line-length = 120
exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "T", "N", "UP", "W", "C90", "COM", "PYI", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PT", "PTH", "ERA", "PGH", "PL", "TRY", "RUF", "ANN", "S", "BLE", "C4", "PIE", "I"]
ignore = ["RUF001", "RUF003", "D203", "D213", "ANN401", "S101", "ANN201", "ANN003", "COM812"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "single"
