[project]
name = "uma-backend-demo"
version = "0.1.0"
description = "FastAPI backend demo for UMA (Unified Model Access)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.2.0",
    "asyncpg>=0.29.0",
    "dependency-injector>=4.41.0",
    "namerec-uma",
]

[project.scripts]
start = "src.main:run"

[tool.uv.sources]
namerec-uma = { path = "../..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
